--- a/ProjetAspNet/Views/Poles/Create.cshtml
+++ b/ProjetAspNet/Views/Poles/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ProjetAspNet.Models.Poles
 
 @{
-    ViewBag.Title = "Ajouter Pole";
+    ViewBag.Title = "Create";
 }
 
-<h2>Ajouter</h2>
+<h2>Create</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Pole</h4>
+        <h4>Poles</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
