--- a/ProjetAspNet/Views/Shared/_Layout.cshtml
+++ b/ProjetAspNet/Views/Shared/_Layout.cshtml
@@ -17,15 +17,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Note de Frais", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Gestion de Note de Frais", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-       
+                   
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Administration
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Clients", "Create", "Customers")</li>
+                            <li>@Html.ActionLink("Roles", "Create", "AspNetRoles")</li> 
+                        </ul>
+                    </li>
+                    <li>@Html.ActionLink("Projet", "Create", "Projects")</li>
+                    <li>@Html.ActionLink("Employe", "Create", "Employees")</li>
                     <li>@Html.ActionLink("Tva", "Create", "Tvas")</li>
-                    <li>@Html.ActionLink("Client", "Create", "Customers")</li>
                     <li>@Html.ActionLink("Pole", "Create", "Poles")</li>
-                    <li>@Html.ActionLink("Type de dépenses", "Create", "ExpanseTypes")</li>
+                    <li>@Html.ActionLink("Type de Frais", "Create", "ExpanseTypes")</li>
+         
+                    
                 </ul>
             </div>
         </div>
@@ -34,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year -Notes De Frais Application</p>
         </footer>
     </div>
 
